--- a/webui/src/scss/_expression.scss
+++ b/webui/src/scss/_expression.scss
@@ -18,6 +18,7 @@
 	/* Override Monaco suggest widget to show details below name */
 	.monaco-editor .suggest-widget {
 		width: 25em !important;
+		z-index: 10000 !important; /* otherwise the top goes under the top banner in action/feedback expression suggestions */
 
 		.monaco-list .monaco-list-row {
 			align-items: center;
